# RandAVX

./: .gitignore  CMakeLists.txt  FindAVX.cmake  README.md
benchmark/: bench.cc  throughput.cc  unique.cc
example/: example1.cc  example2.cc  example3.cc
include/randavx/: cpu.h  gen.h  gen128.h  gen256.h  gen512.h
include/randavx/generators/: mqhr_all.h  multi_all.h
